kubernetes/demo-app/03-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: backend-ns
  labels:
    app: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 80
      targetPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: database-svc
  namespace: database-ns
  labels:
    app: database
spec:
  type: ClusterIP
  selector:
    app: database
  ports:
    - name: http
      port: 80
      targetPort: 5678
